# caffe_study

./: .gitignore  README.md
cpp_example/: bilinear_sampler_layer.cpp  bilinear_sampler_layer.py
cpp_example/lenet_mnist_image/: CMakeLists.txt  lenet_mnist_image.cpp
cpp_example/lenet_mnist_lmdb/: CMakeLists.txt  build.sh  lenet_mnist_lmdb.cpp
cpp_example/log_reg_with_prototxt/: CMakeLists.txt  bindb.cpp  build.sh  generate_train_test_data.sh  logreg_test.cpp  logreg_train.cpp
cpp_layer/: bilinear_sampler_layer.hpp
data/fer2013/: README.md  generate_fer2013_train_test_list_txt.py  generate_fer2013_train_test_png.py
data/mnist/: generate_mnist_train_test_txt.py
python_layer/: caffenet.py  lenet.py  lenet2.py  lenet_mnist_deploy.py  lenet_mnist_python_layer.py  my_image_data_layer.py  resnet18.py  resnet18_FER2013.py  resnet18_FER2013_deploy.py
python_layer/denseFlowNet/: denseFlowNet.py
python_layer/fer2013/: resnet18_FER2013.py  resnet18_FER2013_demo.py  resnet18_FER2013_deploy.py
python_layer/lenet/: lenet.py  lenet_auto_solver.prototxt  lenet_auto_test.prototxt  lenet_auto_train.prototxt  lenet_deploy.prototxt  lenet_mnist_deploy.py  weights.caffemodel
python_layer/lenet2/: lenet2.py  weights.caffemodel
python_layer/lenet_pylayer/: lenet_pylayer_deploy.prototxt  weights.caffemodel
